// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`recursiveParser golden: models/* FILE fixtures > parses Comprehensive_Test_Procedure_V_1-0-0_procedures_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 21,
  "nodes": [
    {
      "childCount": 20,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "markerKeys": [],
      "name": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "parentId": null,
      "storageMode": "FILE",
      "type": "document",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Artifact as Input Only",
      "markerKeys": [],
      "name": "Artifact as Input Only",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Artifact as Output Only",
      "markerKeys": [],
      "name": "Artifact as Output Only",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Artifact Never Referenced",
      "markerKeys": [],
      "name": "Artifact Never Referenced",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Artifact Referenced by Decision",
      "markerKeys": [],
      "name": "Artifact Referenced by Decision",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Artifact with Fields",
      "markerKeys": [],
      "name": "Artifact with Fields",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Basic Artifact",
      "markerKeys": [],
      "name": "Basic Artifact",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Code Review Platform",
      "markerKeys": [],
      "name": "Code Review Platform",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Jane Doe",
      "markerKeys": [],
      "name": "Jane Doe",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/John Smith",
      "markerKeys": [],
      "name": "John Smith",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Mockup Editor",
      "markerKeys": [],
      "name": "Mockup Editor",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Position with No Role",
      "markerKeys": [],
      "name": "Position with No Role",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Role as Orphan",
      "markerKeys": [],
      "name": "Role as Orphan",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Role with No Fields",
      "markerKeys": [],
      "name": "Role with No Fields",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Role with Relations",
      "markerKeys": [],
      "name": "Role with Relations",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Role with Scope External",
      "markerKeys": [],
      "name": "Role with Scope External",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Role with Scope Internal",
      "markerKeys": [],
      "name": "Role with Scope Internal",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Senior Tester",
      "markerKeys": [],
      "name": "Senior Tester",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Test Manager",
      "markerKeys": [],
      "name": "Test Manager",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Test Runner",
      "markerKeys": [],
      "name": "Test Runner",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures/Unassigned Person",
      "markerKeys": [],
      "name": "Unassigned Person",
      "parentId": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
  ],
  "rootIds": [
    "Comprehensive_Test_Procedure_V_1-0-0_procedures",
  ],
}
`;

exports[`recursiveParser golden: models/* FILE fixtures > parses FORMAT_V_0-1-0_business_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 1,
  "nodes": [
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "FORMAT_V_0-1-0_business",
      "markerKeys": [],
      "name": "FORMAT_V_0-1-0_business",
      "parentId": null,
      "storageMode": "FILE",
      "type": "FORMAT",
    },
  ],
  "rootIds": [
    "FORMAT_V_0-1-0_business",
  ],
}
`;

exports[`recursiveParser golden: models/* FILE fixtures > parses FORMAT_V_0-1-1_business_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 1,
  "nodes": [
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "FORMAT_V_0-1-1_business",
      "markerKeys": [],
      "name": "FORMAT_V_0-1-1_business",
      "parentId": null,
      "storageMode": "FILE",
      "type": "FORMAT",
    },
  ],
  "rootIds": [
    "FORMAT_V_0-1-1_business",
  ],
}
`;

exports[`recursiveParser golden: models/* FILE fixtures > parses Ghostbusters_V_0-1-1_business_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 2,
  "nodes": [
    {
      "childCount": 1,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business",
      "markerKeys": [],
      "name": "Ghostbusters_V_0-1-1_business",
      "parentId": null,
      "storageMode": "FILE",
      "type": "Ghostbusters",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/The containment unit will not reach critical mass.",
      "markerKeys": [],
      "name": "The containment unit will not reach critical mass.",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Assumptions",
    },
  ],
  "rootIds": [
    "Ghostbusters_V_0-1-1_business",
  ],
}
`;

exports[`recursiveParser golden: models/* FILE fixtures > parses Knowledge_Management_V_1-0-0_procedures_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 28,
  "nodes": [
    {
      "childCount": 27,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures",
      "markerKeys": [],
      "name": "Knowledge_Management_V_1-0-0_procedures",
      "parentId": null,
      "storageMode": "FILE",
      "type": "document",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Alex Chen",
      "markerKeys": [],
      "name": "Alex Chen",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Knowledge_Management_V_1-0-0_procedures/Approver",
      "markerKeys": [],
      "name": "Approver",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Knowledge_Management_V_1-0-0_procedures/Author",
      "markerKeys": [],
      "name": "Author",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Changelog Entry",
      "markerKeys": [],
      "name": "Changelog Entry",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/CI/CD Pipeline",
      "markerKeys": [],
      "name": "CI/CD Pipeline",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/DevOps Engineer",
      "markerKeys": [],
      "name": "DevOps Engineer",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Documentation Lead",
      "markerKeys": [],
      "name": "Documentation Lead",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Draft Document",
      "markerKeys": [],
      "name": "Draft Document",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Knowledge_Management_V_1-0-0_procedures/External Contributor",
      "markerKeys": [],
      "name": "External Contributor",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/GitHub",
      "markerKeys": [],
      "name": "GitHub",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/James Wilson",
      "markerKeys": [],
      "name": "James Wilson",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Knowledge Base Platform",
      "markerKeys": [],
      "name": "Knowledge Base Platform",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Knowledge_Management_V_1-0-0_procedures/Knowledge Manager",
      "markerKeys": [],
      "name": "Knowledge Manager",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Maria Santos",
      "markerKeys": [],
      "name": "Maria Santos",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Markdown Editor",
      "markerKeys": [],
      "name": "Markdown Editor",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Priya Patel",
      "markerKeys": [],
      "name": "Priya Patel",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Published Document",
      "markerKeys": [],
      "name": "Published Document",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Pull Request",
      "markerKeys": [],
      "name": "Pull Request",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Review Checklist",
      "markerKeys": [],
      "name": "Review Checklist",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Knowledge_Management_V_1-0-0_procedures/Reviewer",
      "markerKeys": [],
      "name": "Reviewer",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Sam Taylor",
      "markerKeys": [],
      "name": "Sam Taylor",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Senior Developer",
      "markerKeys": [],
      "name": "Senior Developer",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Style Guide",
      "markerKeys": [],
      "name": "Style Guide",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Team Lead",
      "markerKeys": [],
      "name": "Team Lead",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Knowledge_Management_V_1-0-0_procedures/Technical Reviewer",
      "markerKeys": [],
      "name": "Technical Reviewer",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Technical Writer",
      "markerKeys": [],
      "name": "Technical Writer",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures/Tom+�s Rivera",
      "markerKeys": [],
      "name": "Tom+�s Rivera",
      "parentId": "Knowledge_Management_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
  ],
  "rootIds": [
    "Knowledge_Management_V_1-0-0_procedures",
  ],
}
`;

exports[`recursiveParser golden: models/* FILE fixtures > parses Knowledge_Management_V_1-0-1_procedures_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 28,
  "nodes": [
    {
      "childCount": 27,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures",
      "markerKeys": [],
      "name": "Knowledge_Management_V_1-0-1_procedures",
      "parentId": null,
      "storageMode": "FILE",
      "type": "document",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Alex Chen",
      "markerKeys": [],
      "name": "Alex Chen",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Knowledge_Management_V_1-0-1_procedures/Approver",
      "markerKeys": [],
      "name": "Approver",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Knowledge_Management_V_1-0-1_procedures/Author",
      "markerKeys": [],
      "name": "Author",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Changelog Entry",
      "markerKeys": [],
      "name": "Changelog Entry",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/CI/CD Pipeline",
      "markerKeys": [],
      "name": "CI/CD Pipeline",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/DevOps Engineer",
      "markerKeys": [],
      "name": "DevOps Engineer",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Documentation Lead",
      "markerKeys": [],
      "name": "Documentation Lead",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Draft Document",
      "markerKeys": [],
      "name": "Draft Document",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Knowledge_Management_V_1-0-1_procedures/External Contributor",
      "markerKeys": [],
      "name": "External Contributor",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/GitHub",
      "markerKeys": [],
      "name": "GitHub",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/James Wilson",
      "markerKeys": [],
      "name": "James Wilson",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Knowledge Base Platform",
      "markerKeys": [],
      "name": "Knowledge Base Platform",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Knowledge_Management_V_1-0-1_procedures/Knowledge Manager",
      "markerKeys": [],
      "name": "Knowledge Manager",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Maria Santos",
      "markerKeys": [],
      "name": "Maria Santos",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Markdown Editor",
      "markerKeys": [],
      "name": "Markdown Editor",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Priya Patel",
      "markerKeys": [],
      "name": "Priya Patel",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Published Document",
      "markerKeys": [],
      "name": "Published Document",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Pull Request",
      "markerKeys": [],
      "name": "Pull Request",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Review Checklist",
      "markerKeys": [],
      "name": "Review Checklist",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Knowledge_Management_V_1-0-1_procedures/Reviewer",
      "markerKeys": [],
      "name": "Reviewer",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Sam Taylor",
      "markerKeys": [],
      "name": "Sam Taylor",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Senior Developer",
      "markerKeys": [],
      "name": "Senior Developer",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Style Guide",
      "markerKeys": [],
      "name": "Style Guide",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Team Lead",
      "markerKeys": [],
      "name": "Team Lead",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "Knowledge_Management_V_1-0-1_procedures/Technical Reviewer",
      "markerKeys": [],
      "name": "Technical Reviewer",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Technical Writer",
      "markerKeys": [],
      "name": "Technical Writer",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures/Tom+�s Rivera",
      "markerKeys": [],
      "name": "Tom+�s Rivera",
      "parentId": "Knowledge_Management_V_1-0-1_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
  ],
  "rootIds": [
    "Knowledge_Management_V_1-0-1_procedures",
  ],
}
`;

exports[`recursiveParser golden: models/* FILE fixtures > parses iNNv0_Innovation_Process_V_1-0-0_procedures_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 25,
  "nodes": [
    {
      "childCount": 24,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "markerKeys": [],
      "name": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "parentId": null,
      "storageMode": "FILE",
      "type": "document",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Alex Chen",
      "markerKeys": [],
      "name": "Alex Chen",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/assessmeNNt",
      "markerKeys": [],
      "name": "assessmeNNt",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/desigNN",
      "markerKeys": [],
      "name": "desigNN",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Domain Expert",
      "markerKeys": [],
      "name": "Domain Expert",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/External Consultant",
      "markerKeys": [],
      "name": "External Consultant",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Initiative Tracking Board",
      "markerKeys": [],
      "name": "Initiative Tracking Board",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/iNNitiatives",
      "markerKeys": [],
      "name": "iNNitiatives",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Innovation Analyst",
      "markerKeys": [],
      "name": "Innovation Analyst",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Innovation Lead",
      "markerKeys": [],
      "name": "Innovation Lead",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Innovation Management Plan",
      "markerKeys": [],
      "name": "Innovation Management Plan",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Innovation Manager",
      "markerKeys": [],
      "name": "Innovation Manager",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Jordan Taylor",
      "markerKeys": [],
      "name": "Jordan Taylor",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Maturity Assessment Report",
      "markerKeys": [],
      "name": "Maturity Assessment Report",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Opportunities Registry",
      "markerKeys": [],
      "name": "Opportunities Registry",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/opportuNNities",
      "markerKeys": [],
      "name": "opportuNNities",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Organization Description Document",
      "markerKeys": [],
      "name": "Organization Description Document",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/organizatioNN",
      "markerKeys": [],
      "name": "organizatioNN",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Pat Morgan",
      "markerKeys": [],
      "name": "Pat Morgan",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/plaNN",
      "markerKeys": [],
      "name": "plaNN",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "tools",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Program Design Document",
      "markerKeys": [],
      "name": "Program Design Document",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "artifact",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Program Manager",
      "markerKeys": [],
      "name": "Program Manager",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "position",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Sam Rivera",
      "markerKeys": [],
      "name": "Sam Rivera",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "person",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Stakeholder",
      "markerKeys": [],
      "name": "Stakeholder",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
    {
      "childCount": 0,
      "fieldKeys": [
        "scope",
      ],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures/Team Member",
      "markerKeys": [],
      "name": "Team Member",
      "parentId": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "storageMode": "FILE",
      "type": "roles",
    },
  ],
  "rootIds": [
    "iNNv0_Innovation_Process_V_1-0-0_procedures",
  ],
}
`;

exports[`recursiveParser golden: models/* FILE fixtures > parses mini-file_V_0-0-1_business_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 5,
  "nodes": [
    {
      "childCount": 4,
      "fieldKeys": [],
      "id": "mini-file_V_0-0-1_business",
      "markerKeys": [],
      "name": "mini-file_V_0-0-1_business",
      "parentId": null,
      "storageMode": "FILE",
      "type": "Mini File — FILE mode smoke test",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "mini-file_V_0-0-1_business/Assumption One",
      "markerKeys": [],
      "name": "Assumption One",
      "parentId": "mini-file_V_0-0-1_business",
      "storageMode": "FILE",
      "type": "Assumptions",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "mini-file_V_0-0-1_business/Core Value",
      "markerKeys": [],
      "name": "Core Value",
      "parentId": "mini-file_V_0-0-1_business",
      "storageMode": "FILE",
      "type": "Value propositions",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "mini-file_V_0-0-1_business/Sample Problem",
      "markerKeys": [],
      "name": "Sample Problem",
      "parentId": "mini-file_V_0-0-1_business",
      "storageMode": "FILE",
      "type": "Problems",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "mini-file_V_0-0-1_business/Second Problem",
      "markerKeys": [],
      "name": "Second Problem",
      "parentId": "mini-file_V_0-0-1_business",
      "storageMode": "FILE",
      "type": "Problems",
    },
  ],
  "rootIds": [
    "mini-file_V_0-0-1_business",
  ],
}
`;
